# actorch

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.cfg  setup.py
actorch/: __init__.py  __main__.py  datasets.py  registry.py  utils.py  version.py
actorch/agents/: __init__.py  agent.py  deterministic_agent.py  dltv_bonus_agent.py  epsilon_greedy_agent.py  gaussian_noise_agent.py  ou_noise_agent.py  parameter_noise_agent.py  stochastic_agent.py
actorch/algorithms/: __init__.py  a2c.py  acktr.py  awr.py  (+9 more)
conda/: environment-linux.yml  environment-macos.yml  environment-windows.yml
docs/: README.md  conf.py  index.rst  requirements-docs.txt
examples/: A2C-AsyncHyperBand_LunarLander-v2.py  A2C_LunarLander-v2.py  ACKTR_LunarLander-v2.py  AWR-AffineFlow_Pendulum-v1.py  AWR-NormalizingFlow_Pendulum-v1.py  AWR_Pendulum-v1.py  D3PG-Finite_LunarLanderContinuous-v2.py  D3PG-Normal_LunarLanderContinuous-v2.py  DDPG_LunarLanderContinuous-v2.py  DistributedDataParallelDDPG_LunarLanderContinuous-v2.py  DistributedDataParallelREINFORCE_CartPole-v1.py  PPO-Laplace_Pendulum-v1.py  PPO_Pendulum-v1.py  REINFORCE_CartPole-v1.py  SAC_BipedalWalker-v3.py  SAC_Pendulum-v1.py  TD3_LunarLanderContinuous-v2.py  TRPO_Pendulum-v1.py
requirements/: requirements-dev.txt  requirements-setup.txt  requirements-test.txt  requirements-vistool.txt  requirements.txt
tests/: test_algorithms.py  test_cat_distribution.py  test_constraints.py  test_deterministic.py  test_finite.py  test_models.py  test_value_estimation.py
(+131 files in other folders)
