[build-system]
requires = [
  "setuptools >= 49.6.0",
  "wheel >= 0.34.2",
]
build-backend = "setuptools.build_meta"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_local_folder = "actorch"
line_length = 88
lines_after_imports = 2
multi_line_output = 3
skip_gitignore = true
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cache-clear --cov=actorch"
testpaths = ["tests"]
